--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.organization>davidrotaborudea</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectKey>davidrotaborudea_paymentsB</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
