Enviar build a Docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/paymentsB
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=1234
-
+server.port=8081
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
