--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,53 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  build:
+    # Depende del job 'sonar'
+    needs: sonar
+    name: Build
+    # Se ejecuta en la última versión de Ubuntu
+    runs-on: ubuntu-latest
+
+    steps:
+      # ANTES DE EMPEZAR CON EL JAR HACE LO DE COVERALLS
+      - uses: actions/checkout@v1
+
+      # 1. Clona el repositorio
+      - name: Checkout repository
+        uses: actions/checkout@v1
+
+      # 2. Configura JDK 11
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: '17'
+
+      # 3. Cachea los paquetes de Maven
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      # 4. Construye la aplicación usando Maven
+      - name: Build with Maven
+        run: mvn -B package -DskipTests --file pom.xml
+
+      # 5. Sube el JAR generado como un artefacto
+      - name: Upload JAR
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifact
+          path: target/paymentsB-0.0.1-SNAPSHOT.jar
+
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v6
+        with:
+          image: davidrotaborudea/paymentsb
+          tags: latest
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
