Enviar build a Docker

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,6 +70,9 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
+      - name: Build the project with Maven
+        run: mvn clean package
+
       # 4. Construye la aplicación usando Maven
       - name: Build with Maven
         run: mvn -B package -DskipTests --file pom.xml
