--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,27 +42,17 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   build:
-    # Depende del job 'sonar'
     needs: sonar
     name: Build
-    # Se ejecuta en la última versión de Ubuntu
     runs-on: ubuntu-latest
-
     steps:
-      # ANTES DE EMPEZAR CON EL JAR HACE LO DE COVERALLS
       - uses: actions/checkout@v1
 
-      # 1. Clona el repositorio
-      - name: Checkout repository
-        uses: actions/checkout@v1
-
-      # 2. Configura JDK 11
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
           java-version: '17'
 
-      # 3. Cachea los paquetes de Maven
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
@@ -73,16 +63,24 @@ jobs:
       - name: Build the project with Maven
         run: mvn clean package -DskipTests
 
-      # 4. Construye la aplicación usando Maven
-      - name: Build with Maven
-        run: mvn -B package -DskipTests --file pom.xml
-
-      # 5. Sube el JAR generado como un artefacto
       - name: Upload JAR
         uses: actions/upload-artifact@v3
         with:
-          name: artifact
+          name: paymentsb-jar
           path: target/paymentsb-0.0.1-SNAPSHOT.jar
+
+  docker:
+    needs: build
+    name: Docker build and push
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Download JAR
+        uses: actions/download-artifact@v3
+        with:
+          name: paymentsb-jar
+          path: target/
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6
