--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: paymentsb-jar
-          path: target/
+          path: target/paymentsb-0.0.1-SNAPSHOT.jar
 
       - name: Build & push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6
