--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Upload JAR
         uses: actions/upload-artifact@v3
         with:
-          name: paymentsb-jar
+          name: paymentsb-0.0.1-SNAPSHOT.jar
           path: target/paymentsb-0.0.1-SNAPSHOT.jar
 
   docker:
