--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,24 +4,25 @@ on:
   push:
     branches:
       - main
-
 jobs:
   #Sonar's Job
   sonar:
+    #Depends on test's job
     name: SonarCloud analysis
     #Run on Ubuntu using the latest version
     runs-on: ubuntu-latest
     #Job's steps
     steps:
-      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can access it
+      #Check-out your repository under $GITHUB_WORKSPACE, so your workflow can  access it
       - uses: actions/checkout@v1
-      #Set up JDK 17
+      #Set up JDK 11
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
           java-version: '17'
-      #Set up SonarCloud cache
+        #Set up SonarCloud cache
       - name: Cache SonarCloud packages
+        #This action allows caching dependencies and build outputs to improve  workflow execution time.
         uses: actions/cache@v1
         with:
           path: ~/.sonar/cache
@@ -29,30 +30,42 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
       #Set up Maven cache
       - name: Cache Maven packages
+        #This action allows caching dependencies and build outputs to improve  workflow execution time.
         uses: actions/cache@v1
         with:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      #Analyze project with SonarCloud
-      - name: Analyze with SonarCloud (skip tests)
-        run: mvn -B clean verify sonar:sonar -Dsonar.projectKey=davidrotaborudea_paymentsB -Dsonar.organization=davidrotaborudea -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN -DskipTests
+        #Analyze project with SonarCloud
+      - name: Analyze with SonarCloud
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=davidrotaborudea_paymentsB -Dsonar.organization=davidrotaborudea -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
+
   build:
+    # Depende del job 'sonar'
     needs: sonar
     name: Build
+    # Se ejecuta en la última versión de Ubuntu
     runs-on: ubuntu-latest
+
     steps:
+      # ANTES DE EMPEZAR CON EL JAR HACE LO DE COVERALLS
       - uses: actions/checkout@v1
 
+      # 1. Clona el repositorio
+      - name: Checkout repository
+        uses: actions/checkout@v1
+
+      # 2. Configura JDK 11
       - name: Set up JDK 17
         uses: actions/setup-java@v1
         with:
           java-version: '17'
 
+      # 3. Cachea los paquetes de Maven
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
@@ -60,26 +73,15 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Build the project with Maven
-        run: mvn clean package -DskipTests
+      # 4. Construye la aplicación usando Maven
+      - name: Build with Maven
+        run: mvn -B package -DskipTests --file pom.xml
 
+      # 5. Sube el JAR generado como un artefacto
       - name: Upload JAR
         uses: actions/upload-artifact@v3
         with:
-          name: paymentsb-0.0.1-SNAPSHOT.jar
-          path: target/paymentsb-0.0.1-SNAPSHOT.jar
-
-  docker:
-    needs: build
-    name: Docker build and push
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-
-      - name: Download JAR
-        uses: actions/download-artifact@v3
-        with:
-          name: paymentsb-0.0.1-SNAPSHOT.jar
+          name: artifact
           path: target/paymentsb-0.0.1-SNAPSHOT.jar
 
       - name: Build & push Docker image
