Enviar build a Docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,7 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+spring.graphql.cors.allow-credentials=true
+spring.graphql.cors.allowed-origins=http://localhost:3000
 
 
