--- a/pom.xml
+++ b/pom.xml
@@ -9,23 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.davidrotabor</groupId>
-	<artifactId>paymentsB</artifactId>
+	<artifactId>paymentsb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>paymentsB</name>
 	<description>Demo project for Spring Boot</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
 		<java.version>17</java.version>
 		<sonar.organization>davidrotaborudea</sonar.organization>
