--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,8 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 spring.graphql.cors.allow-credentials=true
 spring.graphql.cors.allowed-origins=http://localhost:3000
+spring.graphql.cors.allowed-headers=*
+spring.graphql.cors.allowed-methods=POST
+
 
 
