--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,12 @@ spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 spring.graphql.cors.allow-credentials=true
-spring.graphql.cors.allowed-origins=http://localhost:3000
+spring.graphql.cors.allowed-origins=*
 spring.graphql.cors.allowed-headers=*
-spring.graphql.cors.allowed-methods=POST
+spring.graphql.cors.allowed-methods=*
+spring.graphql.cors.allowed-origin-patterns=*
+
+
 
 
 
