--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,6 +88,9 @@ jobs:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
     steps:
+
+      - name: Clean Install
+        run: mvn clean install
       # Checkout code
       - name: Checkout repository
         uses: actions/checkout@v2
