--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,94 +1,46 @@
-name: CI/CD Pipeline
+name: SonarCloud Analysis
+
 on:
-  workflow_dispatch:
   push:
     branches:
-      - main
+      - main  # O la rama principal que prefieras
+  pull_request:
+    branches:
+      - main  # O la rama de destino de las pull requests
 
 jobs:
-  # SonarCloud Analysis Job
-  sonar:
-    name: SonarCloud analysis
-    runs-on: ubuntu-latest
-    steps:
-      # Checkout code
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      # Set up JDK 17 (latest supported)
-      - name: Set up JDK
-        uses: actions/setup-java@v1
-        with:
-          java-version: '17'
-
-      # Cache SonarCloud dependencies
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      # Cache Maven dependencies
-      - name: Cache Maven packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      # Run SonarCloud analysis
-      - name: Analyze with SonarCloud
-        run: mvn -B clean verify sonar:sonar -Dsonar.projectKey=davidrotaborudea_paymentsB -Dsonar.organization=davidrotaborudea -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -DskipTests
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  # Build and Package Job
   build:
-    needs: sonar
-    name: Build and Package
     runs-on: ubuntu-latest
+
     steps:
-      # Checkout code
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up JDK 17
-      - name: Set up JDK
+      - name: Set up JDK 17  # O la versión de Java que uses
         uses: actions/setup-java@v1
         with:
           java-version: '17'
 
-      # Cache Maven dependencies
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-      # Build the project and package the JAR
-      - name: Build with Maven
-        run: mvn -B package -DskipTests
+      - name: Build and test with Maven
+        run: mvn clean verify
 
-      - name: Verify JAR exists
-        run: ls -l target
+      - name: Run SonarCloud Scan
+        run: mvn sonar:sonar \
+          -Dsonar.projectKey=dyepes-udea_paymentsb \
+          -Dsonar.organization=dyepes-udea \
+          -Dsonar.token=${{ 7d865f91cd4136c4ebf940187df93cf87c2f635b }}
 
-      # Upload the JAR as an artifact
-      - name: Upload JAR
-        uses: actions/upload-artifact@v3
-        with:
-          name: artifact
-          path: target/paymentsb-0.0.1-SNAPSHOT.jar
-
-      # Build & push Docker image
-      - name: Build & push Docker image
-        uses: mr-smithers-excellent/docker-build-push@v6
-        with:
-          image: davidrotaborudea/paymentsb
-          tags: latest
-          registry: docker.io
-          dockerfile: Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Upload JaCoCo coverage report to SonarCloud
+        run: mvn sonar:sonar \
+          -Dsonar.projectKey=dyepes-udea_paymentsb \
+          -Dsonar.organization=dyepes-udea \
+          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+          -Dsonar.token=${{ 7d865f91cd4136c4ebf940187df93cf87c2f635b }}
